--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Aria Halavati"
 title_separator          : "-"
 name                     : &name "Aria Halavati"
 description              : &description "personal website"
-url                      : https://aria.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ariahala.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "ariahala/aria.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
