--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Aria Halavati"
-  avatar           : "profile.png"
+  avatar           : "profile.JPG"
   bio              : "I'm a Pure Mathematics PhD student at the Courant Institute of Mathematical Sciences and my main research interests are geometric variational problems and geometric measure theory."
   location         : "New York, US"
   employer         :
